Release Bhayanak Legends v1.0.0
